Version 1.4.0           2022-02-20

Fixed
- Tesla authorization not working. Replaced TeslaApi with standard lib TeslaPy. Added refresh token and URL authorization. No headless autorization supported at this time.

Version 1.3.7           2022-01-03

Added
- Send history through MQTT

Version 1.3.6           2021-12-27

Fixed
- More robust autosession. Recover from stop-starting non open session.

Version 1.3.5           2021-12-22

Fixed
- Fixed SocketIO protocol version mismatch. Reverted 5 to 4. Upgraded JS package to 2.3.1

Version 1.3.5           2021-12-22

Fixed
- Fixed enabling pushover (missing button event)
- Added Pushover and MQTT to oppleo.example.ini 

Version 1.3.4           2021-12-21

Fixed
- Downgraded cryptography package to 3.1.1 (from 36.0.1) due to missing Rust compiler
- Downgraded WTForms to 2.2.1 (from 3.0.0) to prevent issues due to different class imports

Version 1.3.3           2021-12-21

Fixed
- Updated readme and about to include Pushover and MQTT
- General module version update

Version 1.3.2           2021-12-20

Added
- Basic MQTT support. 
- Added login/logout and websocket connect/disconnect events to MQTT.
- Pushover cross platform push messages
- Monthly energy consumption API call

Fixed
- Improved developer branch update check

Version 1.3.1           2021-07-28

Added
- now listing all recorded energy meter entries, incl. seach on date and time
- edit charge sessions
- show graphs per charge session
- notifications menu. Auto-dissapearing notifications readable in menu
- start/stop charge sessions from rfid token list
- token list row highlight and edit clickable
- retry odometer read button on charge session page

Fixed
- default avatar if none set
- OS info in settings
- update urllib3 to 1.26.5
- page title
- menu link on small (mobile) screen
- Charge sessions filter had rfid id and name in some occasionsß
- White token name/id and icons in charge sessions highlight

Version 1.3.0           2021-05-31

Added